--- a/client/.gitignore
+++ b/client/.gitignore
@@ -13,7 +13,8 @@ dist-ssr
 *.local
 
 # Editor directories and files
-.env
+# Ignore .env file in the api folder
+**/.env
 .vscode/*
 !.vscode/extensions.json
 .idea
